# pythonExtension

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme
cmake_module/: python_test.cmake  swig.cmake
src/: CMakeLists.txt
src/py/: CMakeLists.txt  main.cpp
src/spam/: CMakeLists.txt  __main__.py  spam.cpp
src/swig/: CMakeLists.txt
src/swig/std/: CMakeLists.txt  __main__.py  std.i
src/swig/utils/: CMakeLists.txt  __main__.py  utils.i  win32.h
src/utils/: CMakeLists.txt  __main__.py  utils.i  win32.h
